# alpamayo1.5

./: .gitignore  Alpamayo1.5_RL_Architecture_Guide.md  pyproject.toml
docs/: alpamayo1_5_interactive_guide.html  alpamayo1_5_model_structure_and_inference.md  alpamayo1_5_rl_code_implementation_plan.html  alpamayo1_5_rl_implementation_changes.html  alpamayo1_5_rl_innovations.html  alpamayo1_5_rl_research_plan.html  alpamayo1_5_training_sft_rl_io.md
finetune/rl/: README.md  __init__.py  base_cosmos_wrapper.py  base_data_packer.py  base_dataset.py  base_trainer.py  launcher.py  run_rl_local_test_signal_node.sh  state.py
finetune/rl/hydra_configs/: alpamayo1_5_rvla_rl_pai.yaml  alpamayo1_rvla_rl_pai.yaml
finetune/rl/models/: __init__.py  _spec.py
finetune/rl/notebooks/: rl_checkpoint_inference.ipynb
finetune/rl/prefetch/: __init__.py  dataset.py  server.py  shm.py  test_prefetch.py
finetune/rl/rewards/: __init__.py  aggregated_reward.py  coc_reward.py  comfort_reward.py  consistency_reward.py  hcc_reward.py  multi_objective.py  raa_reward.py  reward_types.py  risk_reward.py  traj_reward.py
finetune/rl/tests/: test_reward_and_routing_smoke.py
finetune/rl/toml/: alpamayo_rvla_rl_local_test.toml
finetune/rl/utils/: adaptive_kl.py  checkpoint.py  contrastive_loss.py  fsdp.py  gspo_loss.py  logit_processor.py  (+2 more)
finetune/sft/: evaluate_hf.py  train_hf.py  trainer.py
output_stage1/: config.yaml
scripts/: convert_cosmos_rl_checkpoint.py  convert_release_config_to_training.py  curate_pai_samples.py  download_pai.py
src/alpamayo1_5/: load_physical_aiavdataset.py
(+42 files in other folders)
