[project]
name = "alpamayo1_5"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
  "accelerate>=1.12.0",
  "av>=16.0.1",
  "cosmos-rl",
  "colorlog>=6.7.0",
  "einops>=0.8.1",
  "hydra-colorlog>=1.2.0",
  "hydra-core>=1.3.2",
  "pandas>=2.3.3",
  "physical-ai-av==0.2.0",
  "pillow>=12.0.0",
  "torch==2.8.0",
  "torchvision>=0.23.0",
  "transformers==4.57.1",
  "flash-attn>=2.8.3",
  "matplotlib>=3.10.7",
  "seaborn>=0.13.2",
  "rich>=14.3.3",
  "wandb>=0.25.0",
  "torchmetrics==1.8.2",
  "deepspeed==0.18.2",
  "vllm==0.11.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

# Ship the library (`alpamayo1_5` under `src/`) and the Cosmos-RL finetune
# package as top-level `rl` (`finetune/rl/`). After `pip install`, use
# `import alpamayo1_5` and `import rl` - no manual PYTHONPATH / sys.path edits.
[tool.hatch.build.targets.wheel]
packages = ["src/alpamayo1_5", "finetune/rl"]

[tool.hatch.build.targets.sdist]
include = ["/pyproject.toml", "/src", "/finetune/rl"]

[dependency-groups]
dev = [
  "mediapy>=1.2.4",
  "ipykernel>=6.29.3",
  "ipywidgets>=8.1.8",
  "pre-commit>=4.5.1",
  "pytest>=8.0.0",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
cosmos-rl = { git = "https://github.com/nvidia-cosmos/cosmos-rl.git", rev = "747d1bd" }

[tool.ruff]
line-length = 100
